--- a/rbac_pro/package.json
+++ b/rbac_pro/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.15.1",
     "morgan": "~1.9.1",
     "puppeteer": "^24.10.0"
