--- a/TrainServe/package.json
+++ b/TrainServe/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.1",
     "morgan": "~1.9.1",
+    "multiparty": "^4.2.3",
     "puppeteer": "^24.10.0"
   }
 }
