--- a/Learnify/package.json
+++ b/Learnify/package.json
@@ -16,6 +16,7 @@
     "antd-mobile-icons": "^0.3.0",
     "axios": "^1.11.0",
     "lodash": "^4.17.21",
+    "pinyin": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
