--- a/AdminEdu/package.json
+++ b/AdminEdu/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "ant-design-vue": "^4.2.6",
     "axios": "^1.9.0",
     "echarts": "^5.6.0",
     "echarts-gl": "^2.0.9",
