--- a/TrainServe/package.json
+++ b/TrainServe/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -15,6 +16,7 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.1",
     "morgan": "~1.9.1",
-    "puppeteer": "^24.10.0"
+    "puppeteer": "^24.10.0",
+    "uuid": "^11.1.0"
   }
 }
