完成合同类型

--- a/AdminEdu/tsconfig.json
+++ b/AdminEdu/tsconfig.json
@@ -38,6 +38,6 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "src/types/**/*.d.ts"
-  ],
+, "src/api/auth.js"  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
