--- a/Learnify/package.json
+++ b/Learnify/package.json
@@ -17,12 +17,14 @@
     "antd-mobile-icons": "^0.3.0",
     "axios": "^1.11.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.536.0",
     "pinyin": "^4.0.0",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "spark-md5": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -30,6 +32,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/spark-md5": "^3.0.5",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
