--- a/TrainServe/package.json
+++ b/TrainServe/package.json
@@ -16,7 +16,9 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.1",
     "morgan": "~1.9.1",
+    "multer": "^2.0.2",
     "multiparty": "^4.2.3",
+    "node-cron": "^4.2.1",
     "puppeteer": "^24.10.0",
     "uuid": "^11.1.0"
   }
