--- a/AdminEdu/package.json
+++ b/AdminEdu/package.json
@@ -25,6 +25,7 @@
     "pinia-plugin-persistedstate": "^4.3.0",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
+    "socket.io-client": "^4.8.1",
     "three": "^0.178.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
