--- a/Learnify/package.json
+++ b/Learnify/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
+    "socket.io-client": "^4.8.1",
     "spark-md5": "^3.0.2"
   },
   "devDependencies": {
