--- a/TrainServe/package.json
+++ b/TrainServe/package.json
@@ -13,11 +13,12 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "mongodb": "^6.17.0",
+    "mongodb": "^6.18.0",
     "mongoose": "^8.15.1",
     "morgan": "~1.9.1",
     "multer": "^2.0.2",
     "multiparty": "^4.2.3",
+    "mysql2": "^3.14.3",
     "node-cron": "^4.2.1",
     "puppeteer": "^24.10.0",
     "socket.io": "^4.8.1",
