--- a/Learnify/package.json
+++ b/Learnify/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@zxing/browser": "^0.1.5",
     "antd-mobile": "^5.39.0",
@@ -25,7 +26,9 @@
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
+    "@amap/amap-jsapi-types": "^0.0.15",
     "@eslint/js": "^9.30.1",
+    "@types/amap-js-api": "^1.4.16",
     "@types/lodash": "^4.17.20",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19.1.8",
