--- a/TrainServe/package.json
+++ b/TrainServe/package.json
@@ -9,13 +9,16 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^17.2.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "http-proxy-middleware": "^3.0.5",
     "jade": "~1.11.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.1",
     "morgan": "~1.9.1",
     "multiparty": "^4.2.3",
-    "puppeteer": "^24.10.0"
+    "puppeteer": "^24.10.0",
+    "ws": "^8.18.3"
   }
 }
